Fixed updates layout

--- a/_config.yml
+++ b/_config.yml
@@ -66,6 +66,8 @@ paginate_path: /page:num/
 
 # Collections
 collections:
+  updates:
+    output: true
   recipes:
     output: true
     permalink: /:collection/:path/
