--- a/_config.yml
+++ b/_config.yml
@@ -28,10 +28,11 @@ search: true
 search_full_content: true
 search_provider: algolia
 algolia:
-  application_id: QB6HVGBSBA
+  application_id: P5TNA3WUD2 #QB6HVGBSBA
   index_name: basically-basic
-  search_only_api_key: 9d5014e5bbc77372547bce778dfa5663
-  powered_by: # true (default), false
+  search_only_api_key: cc563fbba80a9e99fd4ffb40fdc78d1a #9d5014e5bbc77372547bce778dfa5663
+  admin_api_key: 562d9dd832ac9b4de946318aee1bd184
+  powered_by: true # true (default), false
 
 # Liquid
 liquid:
